; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_s_lock.c_finish_spin_delay.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_s_lock.c_finish_spin_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@spins_per_delay = common dso_local global i64 0, align 8
@MAX_SPINS_PER_DELAY = common dso_local global i64 0, align 8
@MIN_SPINS_PER_DELAY = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @finish_spin_delay(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load i64, i64* @spins_per_delay, align 8
  %9 = load i64, i64* @MAX_SPINS_PER_DELAY, align 8
  %10 = icmp slt i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %7
  %12 = load i64, i64* @spins_per_delay, align 8
  %13 = add nsw i64 %12, 100
  %14 = load i64, i64* @MAX_SPINS_PER_DELAY, align 8
  %15 = call i64 @Min(i64 %13, i64 %14)
  store i64 %15, i64* @spins_per_delay, align 8
  br label %16

16:                                               ; preds = %11, %7
  br label %27

17:                                               ; preds = %1
  %18 = load i64, i64* @spins_per_delay, align 8
  %19 = load i64, i64* @MIN_SPINS_PER_DELAY, align 8
  %20 = icmp sgt i64 %18, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %17
  %22 = load i64, i64* @spins_per_delay, align 8
  %23 = sub nsw i64 %22, 1
  %24 = load i64, i64* @MIN_SPINS_PER_DELAY, align 8
  %25 = call i64 @Max(i64 %23, i64 %24)
  store i64 %25, i64* @spins_per_delay, align 8
  br label %26

26:                                               ; preds = %21, %17
  br label %27

27:                                               ; preds = %26, %16
  ret void
}

declare dso_local i64 @Min(i64, i64) #1

declare dso_local i64 @Max(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
